Pantalla de victoria

--- a/app/src/main/res/layout/fragment_victoria.xml
+++ b/app/src/main/res/layout/fragment_victoria.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.screens.derrota.DerrotaFragment">
+    tools:context=".ui.screens.victoria.VictoriaFragment">
 
     <ImageView
-        android:id="@+id/imagenDerrota"
+        android:id="@+id/imagenVictoria"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
