--- a/app/src/main/res/layout/activity_tablero.xml
+++ b/app/src/main/res/layout/activity_tablero.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     android:background="@drawable/fondo_juego_3"
     tools:context="antonio.femxa.appfinal.TableroActivity">
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/anuncio"
+          android:layout_width="match_parent"
+          android:layout_height="100dp">
+
+    </com.google.android.gms.ads.AdView>
+
         <ImageButton
         android:layout_gravity="end"
         android:layout_width="wrap_content"
